# march-madness

./: pyproject.toml  teams.txt
data/: blah.py  bracket_viz.json  current_bracket.json  initial_bracket.json  spread_to_win.tsv  winners.json
data/kenpom/: known_good.html  known_good.json  latest.html
data/sim_results/: 00_pre_tourney.json  01_round_64_mid.json  02_round_64_end.json  03_round_32_mid.json  04_round_32_end.json  05_round_16_mid.json  06_round_16_end.json  07_round_8_game1.json  08_round_8_game2_duke.json  09_round_8_game3_houston.json  09_round_8_game4_auburn.json  10_round_4_game1_florida.json  10_round_4_game2_duke.json  11_round_2_florida.json
data/user_brackets/: 0001.json  parse.py
data/user_brackets/parsed/: austin_jude.json  carrie_bruce.json  chloe_hart.json  danika_sparks.json  david_mayo.json  diddy_didier.json  ian_warford.json  mila_shearer.json  noah_patrick.json
data/user_brackets/raw/: austin_jude.txt  carrie_bruce.txt  chloe_hart.txt  danika_sparks.txt  david_mayo.txt  diddy_didier.txt  ian_warford.txt  mila_shearer.txt  noah_patrick.txt
src/march_madness/: __init__.py  _generate_initial_bracket.py  app.py  bracket.py  group.py  group_plot.py  kenpom.py  simulation.py  simulation2.py  visualize.py  visualize2.py
