[project]
name = "march-madness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Mayo", email = "dcmayo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "selenium>=4.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
